# MEPhI-labs

./: README.md
lab_1/: .gitignore  CMakeLists.txt  Makefile  build.bash  main.c
lab_2/: .gitignore  CMakeLists.txt  Makefile  README.md  lab2_1.c  lab2_2.c  notes
lab_2/additional/: Makefile  README.md
lab_2/additional/src/: main.c
lab_2/additional/src/lib/: librow.c  librow.h
lab_3/: .gitignore  CMakeLists.txt  Makefile  main.c
lab_3/lib/: menu.c  menu.h  utils.c  utils.h
lab_4/: .gitignore  CMakeLists.txt  Makefile  main.c  main_readline.c
lab_4/additional/: .gitignore  Makefile  README.md  build.bash
lab_4/lib/: string.c  string.h
lab_4/src/: main.c  main_readline.c  main_self.c
lab_4/src/lib/: common.c  common.h  string.c  string.h
lab_4/src/lib/common/: common.c
lab_5/: .gitignore  CMakeLists.txt  plot.py
lab_5/src/: main_1.c  main_2.c
lab_5/src/lib/: sort.c  sort.h  struct.c  struct.h  utils.c  utils.h
lab_6/: CMakeLists.txt  build.bash
lab_6/src/: main.c
lab_6/src/lib/: lib.c  lib.h
